Set fixed size for mlbox and hide overflow of long post subjects
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/bioconductor.org@43706 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/content/style/style.sass
+++ b/content/style/style.sass
@@ -61,13 +61,14 @@ a
     line-height: 20px
 
 #mlbox
+  width: 400px
   border-style: none
-  border-width: 1px
   background-color: #eeeeee
   padding: 5px 10px 10px
   h2
     font-size: 13px
   ul
+    overflow: hidden
     list-style-type: none
     margin-left: 0px
     margin-right: 0px
@@ -78,10 +79,12 @@ a
     float: left
     padding: 0px
   .even
-    background-color: #eeeeee
-  .odd
     background-color: #e0e0e0
+  .odd
+    background-color: #eeeeee
 
+  li
+    white-space: nowrap
   li:hover
     font-weight: bold
     font-size: 90%
